--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "tortamApp",
+    "name": "tortam",
     "slug": "tortamApp",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -16,7 +16,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.arhipov035.tortamApp"
+      "package": "com.arhipov035.tortam"
     },
     "web": {
       "bundler": "metro",
@@ -48,6 +48,7 @@
       "eas": {
         "projectId": "7271cd24-32a5-4f2c-92f4-1dfe6caf76dd"
       }
-    }
+    },
+    "owner": "arhipov035"
   }
 }
